# surface_model

./: .hi.drv.swp  .input.gout.swp  1.res  1.txt  1.xyz  AStyle  CMakeLists.txt  Makefile  README.md  hi.drv  hi.fdf  hi.frc  input.backup  input.gin  input.gout  input.in  main.cpp  main.cpp.orig  output  program
astyle-3.4-x64/: README.adoc
astyle-3.4-x64/src/: ASBeautifier.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  astyle.h  astyle_main.h
astyle-3.4/doc/: astyle.html  install.html  news.html  notes.html  styles.css
astyle-3.4/src/: ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASResource.cpp  astyle_main.cpp
include/: Energy.h  Input_Parser.h  Simple_Math.h  Struct_Atom.h  Struct_Atom.h.orig  bulk.h  derivatives.h  derv_1.h  derv_2.h  distributor.h  distributor.h.orig  fdm_algo.h
src/: Energy.cpp  Energy.cpp.orig  Input_Parser.cpp  Input_Parser.cpp.orig  Simple_Math.cpp  Simple_Math.cpp.orig  Struct_Atom.cpp  Struct_Atom.cpp.orig  bulk.cpp  derivatives.cpp  derivatives.cpp.orig  derv_1.cpp  derv_1.cpp.orig  derv_2.cpp  distributor.cpp  distributor.cpp.orig  fdm_algo.cpp
